<resources>
    <string name="app_name">PlantDoc</string>

    <string name="title_home">Home</string>
    <string name="pupuk">Pupuk</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="scan">Scan and identify the plant</string>
    <string name="penyakit_tanaman">Penyakit Tanaman</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="nama_pupuk">Nama Pupuk</string>
    <string name="manfaat">Manfaat</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="berita">Berita Seputar Tanaman</string>
    <string name="headline_news">Headline News</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Scan</string>
    <string name="camerax">CameraX</string>
    <string name="image_penyakit">Image Penyakit</string>
    <string name="failed_take">Failed to take a picture.</string>
    <string name="failed_show">Failed to start the camera.</string>
    <string name="unknown">Unknown</string>
    <string name="capture">Capture</string>
    <string name="enter_search">Search...</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="desc">Scan and Identify your plants.</string>
    <string name="copyright">©2023 C23-PC710</string>
    <string name="name_cannot_be_empty">Username can not be empty</string>
    <string name="email_cannot_be_empty">Email can not be empty</string>
    <string name="invalid_email_address">Email address incorrect</string>
    <string name="password_cannot_be_empty">Password can not be empty</string>
    <string name="password_less_than_8_char">Password must have 8 characters</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Do not have an account?</string>
    <string name="log_out">Log Out</string>
</resources>