<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/camera_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:backgroundTint="@color/green_200"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="10dp">
            <Button
                android:id="@+id/button_camera"
                android:backgroundTint="@color/green_200"
                android:textColor="@color/green_700"
                android:drawableLeft="@drawable/icon_scanner"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/scan"
                android:gravity="center"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/penyakit_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/camera_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/title_penyakit_tanaman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/penyakit_tanaman"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/click_penyakit_tanaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_semua"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/green_700"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openActivity" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPenyakit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/penyakit_tanaman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/pupuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/rvPenyakit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/title_pupuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pupuk"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/click_pupuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_semua"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/green_700"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPupuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pupuk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/berita_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/rvPupuk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/title_berita_tanaman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/berita"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/click_berita_tanaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_semua"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/green_700"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openActivity" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBerita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/berita_tanaman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>